Reimplementação do processador de macros.