@@ -4,35 +4,31 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.*;
-import java.util.logging.Logger;
+import sicxesimulator.logger.SimulatorLogger;
 
-/**
- * Processador de macros para o simulador SIC/XE.
- * Realiza a expansão de macros em uma única passagem.
- * Recebe um arquivo fonte e gera um arquivo de saída com as macros expandidas,
- * com o nome MASMAPRG.ASM (ou conforme definido).
- */
 public class MacroProcessor {
-    private static final Logger logger = Logger.getLogger(MacroProcessor.class.getName());
 
     // Tabela global de macros: nome (maiúsculo) -> MacroDefinition
     private final Map<String, MacroDefinition> macroTable = new HashMap<>();
 
     /**
-     * Processa o arquivo de entrada e gera o arquivo de saída com macros expandidas.
-     * @param inputFile Nome do arquivo fonte de entrada.
+     * Processa o arquivo de entrada e gera o arquivo de saída com as macros expandidas.
+     * @param inputFile Nome do arquivo-fonte de entrada.
      * @param outputFile Nome do arquivo de saída, normalmente "MASMAPRG.ASM".
      * @throws IOException Se ocorrer um erro de leitura/escrita.
      */
     public void process(String inputFile, String outputFile) throws IOException {
-        logger.info("Iniciando processamento de macros no arquivo: " + inputFile);
+        SimulatorLogger.logExecution("MacroProcessor iniciado. Entrada: " + inputFile);
         List<String> sourceLines = Files.readAllLines(Paths.get(inputFile), StandardCharsets.UTF_8);
         List<String> outputLines = new ArrayList<>();
         Deque<MacroDefinition> macroStack = new ArrayDeque<>();
 
-        for (String line : sourceLines) {
-            logger.fine("Linha lida: " + line);
+        // Primeira passagem: identificar e armazenar definições de macro
+        for (int i = 0; i < sourceLines.size(); i++) {
+            String line = sourceLines.get(i);
             String trimmed = line.trim();
+
+            // Se a linha estiver em branco, preserva conforme o contexto atual
             if (trimmed.isEmpty()) {
                 if (macroStack.isEmpty()) {
                     outputLines.add(line);
@@ -42,50 +38,57 @@ public class MacroProcessor {
                 continue;
             }
 
-            // Verifica se a linha é uma definição de macro verificando se o segundo token é "MACRO"
             String[] parts = trimmed.split("\\s+");
+            // Início da definição de macro: ex: "MACRO"
             if (parts.length >= 2 && parts[1].equalsIgnoreCase("MACRO")) {
                 String macroName = parts[0];
                 MacroDefinition macroDef = new MacroDefinition(macroName);
+                SimulatorLogger.logExecution("Definindo macro: " + macroName + " (linha " + (i + 1) + ")");
                 macroStack.push(macroDef);
-                logger.info("Início da definição da macro: " + macroName);
                 continue;
             }
 
-            // Detecta fim de definição de macro: "MEND" (case-insensitive)
+            // Fim da definição: "MEND"
             if (!macroStack.isEmpty() && trimmed.equalsIgnoreCase("MEND")) {
                 MacroDefinition completedMacro = macroStack.pop();
                 macroTable.put(completedMacro.getName().toUpperCase(), completedMacro);
-                logger.info("Fim da definição da macro: " + completedMacro.getName());
+                SimulatorLogger.logExecution("Macro definida: " + completedMacro.getName() + " (linha " + (i + 1) + ")");
                 continue;
             }
 
+            // Se estiver em uma definição de macro, adiciona a linha à macro corrente
             if (!macroStack.isEmpty()) {
                 macroStack.peek().addLine(line);
             } else {
+                // Linha fora de macro: adiciona ao corpo principal
                 outputLines.add(line);
             }
         }
 
+        SimulatorLogger.logExecution("Macros registradas: " + macroTable.keySet());
 
-        // Expansão das macros no corpo principal
+        // Segunda passagem: expansão das macros no corpo principal
         List<String> expandedLines = new ArrayList<>();
-        logger.info("Iniciando expansão das linhas do corpo principal.");
-        for (String line : outputLines) {
-            List<String> expanded = expandLine(line);
-            logger.fine("Linha original: \"" + line + "\" expandida para: " + expanded);
-            expandedLines.addAll(expanded);
+        for (int i = 0; i < outputLines.size(); i++) {
+            String line = outputLines.get(i);
+            try {
+                List<String> expanded = expandLine(line);
+                expandedLines.addAll(expanded);
+            } catch (Exception e) {
+                SimulatorLogger.logError("Erro na expansão da linha " + (i + 1) + ": " + line, e);
+                // Em caso de erro, preserva a linha original
+                expandedLines.add(line);
+            }
         }
 
         Files.write(Paths.get(outputFile), expandedLines, StandardCharsets.UTF_8);
-        logger.info("Processamento de macros concluído. Arquivo gerado: " + outputFile);
+        SimulatorLogger.logExecution("Processamento concluído. Arquivo gerado: " + outputFile);
     }
 
     /**
-     * Expande recursivamente uma linha, verificando se a linha deve ser expandida por macro.
-     * Se a linha contém apenas um token e esse token é uma macro, expande-a.
-     * Se houver mais de um token, assume que o primeiro é um rótulo e o segundo o mnemônico.
-     * Se o mnemônico for o nome de uma macro, expande a macro e preserva o rótulo na primeira linha.
+     * Expande recursivamente uma linha, tratando chamadas de macro.
+     * Se a linha contiver apenas um token e este corresponder a uma macro, expande-a.
+     * Se houver mais de um token, assume que o primeiro é rótulo e o segundo, mnemônico.
      * @param line Linha a ser expandida.
      * @return Lista de linhas resultantes da expansão.
      */
@@ -95,6 +98,8 @@ public class MacroProcessor {
             return List.of(line);
         }
         String[] tokens = trimmed.split("\\s+");
+
+        // Caso simples: linha com apenas um token (possível chamada de macro sem rótulo)
         if (tokens.length == 1) {
             String token = tokens[0].toUpperCase();
             if (macroTable.containsKey(token)) {
@@ -103,13 +108,12 @@ public class MacroProcessor {
                 for (String macroLine : macro.getBody()) {
                     expanded.addAll(expandLine(macroLine));
                 }
-                logger.info("Expansão da macro: " + token + " -> " + expanded);
                 return expanded;
             } else {
                 return List.of(line);
             }
         } else {
-            // Assume que se houver mais de um token, o primeiro é rótulo e o segundo mnemônico.
+            // Caso com rótulo: assume que o primeiro token é rótulo e o segundo, o mnemônico
             String mnemonic = tokens[1].toUpperCase();
             if (macroTable.containsKey(mnemonic)) {
                 MacroDefinition macro = macroTable.get(mnemonic);
@@ -119,7 +123,8 @@ public class MacroProcessor {
                 for (String macroLine : macro.getBody()) {
                     List<String> subExpanded = expandLine(macroLine);
                     if (firstLine) {
-                        String newLine = label + " " + subExpanded.get(0).trim();
+                        // Preserva o rótulo na primeira linha da expansão
+                        String newLine = label + " " + subExpanded.getFirst().trim();
                         expanded.add(newLine);
                         if (subExpanded.size() > 1) {
                             expanded.addAll(subExpanded.subList(1, subExpanded.size()));
@@ -129,7 +134,6 @@ public class MacroProcessor {
                         expanded.addAll(subExpanded);
                     }
                 }
-                logger.info("Expansão da macro: " + mnemonic + " com rótulo \"" + label + "\" -> " + expanded);
                 return expanded;
             } else {
                 return List.of(line);
